--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
         "@emotion/cache": "^11.6.0",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
+        "@mantine/core": "^4.2.6",
+        "@mantine/dates": "^4.2.6",
+        "@mantine/dropzone": "^4.2.6",
+        "@mantine/form": "^4.2.6",
+        "@mantine/hooks": "^4.2.6",
+        "@mantine/modals": "^4.2.6",
+        "@mantine/next": "^4.2.6",
+        "@mantine/notifications": "^4.2.6",
+        "@mantine/prism": "^4.2.6",
+        "@mantine/rte": "^3.4.3",
+        "@mantine/spotlight": "^4.2.6",
         "@mui/base": "^5.0.0-alpha.62",
         "@mui/core": "^5.0.0-alpha.54",
         "@mui/icons-material": "^5.3.1",
@@ -23,9 +34,10 @@
         "@types/styled-components": "^5.1.15",
         "chart.js": "^3.6.0",
         "cypress": "^9.0.0",
+        "dayjs": "^1.11.2",
         "jss": "^10.8.2",
         "jss-rtl": "^0.3.0",
-        "next": "12.0.3",
+        "next": "^12.1.6",
         "next-pwa": "^5.4.0",
         "react": "17.0.2",
         "react-chartjs-2": "^3.3.0",
