--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "stylis-plugin-rtl": "^2.1.1"
     },
     "devDependencies": {
+        "@cloudflare/workers-types": "^3.11.0",
         "@next/eslint-plugin-next": "^12.0.3",
         "@types/node": "16.11.6",
         "@types/react": "17.0.34",
