--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "1.5.1",
-    "@redwoodjs/graphql-server": "1.5.1"
+    "@redwoodjs/graphql-server": "1.5.1",
+    "better-fs": "^11.0.4",
+    "firebase-admin": "^10.2.0"
   }
 }
