--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,19 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.22.0",
+    "@redwoodjs/auth": "1.5.1",
     "@redwoodjs/forms": "1.5.1",
     "@redwoodjs/router": "1.5.1",
     "@redwoodjs/web": "1.5.1",
+    "firebase": "^9.8.2",
+    "i18n": "^0.15.0",
+    "i18next": "^21.8.8",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "marked": "^4.0.16",
     "prop-types": "15.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.17.0"
   }
 }
