--- a/web/package.json
+++ b/web/package.json
@@ -27,5 +27,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.17.0"
+  },
+  "devDependencies": {
+    "@storybook/addons": "^6.5.7",
+    "@storybook/theming": "^6.5.7"
   }
 }
