added Mui and Mantine

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,7 +9,7 @@ COPY package.json .
 COPY redwood.toml .
 COPY yarn.lock .
 
-RUN yarn install --frozen-lockfile
+RUN yarn install
 RUN yarn add react react-dom --ignore-workspace-root-check
 RUN yarn rw build api
 RUN rm -rf ./api/src
