--- a/web/package.json
+++ b/web/package.json
@@ -14,10 +14,26 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.22.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mantine/core": "^4.2.8",
+    "@mantine/dates": "^4.2.8",
+    "@mantine/dropzone": "^4.2.8",
+    "@mantine/form": "^4.2.8",
+    "@mantine/hooks": "^4.2.8",
+    "@mantine/modals": "^4.2.8",
+    "@mantine/notifications": "^4.2.8",
+    "@mantine/prism": "^4.2.8",
+    "@mantine/rte": "^4.2.8",
+    "@mantine/spotlight": "^4.2.8",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@redwoodjs/auth": "1.5.1",
     "@redwoodjs/forms": "1.5.1",
     "@redwoodjs/router": "1.5.1",
     "@redwoodjs/web": "1.5.1",
+    "dayjs": "^1.11.3",
     "firebase": "^9.8.2",
     "i18n": "^0.15.0",
     "i18next": "^21.8.8",
@@ -26,7 +42,8 @@
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-i18next": "^11.17.0"
+    "react-i18next": "^11.17.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@storybook/addons": "^6.5.7",
