--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "am-lottery",
+    "name": "mamad-dev",
     "private": true,
+    "version": "1.0.0",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -13,17 +14,17 @@
         "@emotion/cache": "^11.6.0",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
-        "@mantine/core": "^4.2.6",
-        "@mantine/dates": "^4.2.6",
-        "@mantine/dropzone": "^4.2.6",
-        "@mantine/form": "^4.2.6",
-        "@mantine/hooks": "^4.2.6",
-        "@mantine/modals": "^4.2.6",
-        "@mantine/next": "^4.2.6",
-        "@mantine/notifications": "^4.2.6",
-        "@mantine/prism": "^4.2.6",
+        "@mantine/core": "^4.2.9",
+        "@mantine/dates": "^4.2.9",
+        "@mantine/dropzone": "^4.2.9",
+        "@mantine/form": "^4.2.9",
+        "@mantine/hooks": "^4.2.9",
+        "@mantine/modals": "^4.2.9",
+        "@mantine/next": "^4.2.9",
+        "@mantine/notifications": "^4.2.9",
+        "@mantine/prism": "^4.2.9",
         "@mantine/rte": "^3.4.3",
-        "@mantine/spotlight": "^4.2.6",
+        "@mantine/spotlight": "^4.2.9",
         "@mui/base": "^5.0.0-alpha.62",
         "@mui/core": "^5.0.0-alpha.54",
         "@mui/icons-material": "^5.3.1",
@@ -34,7 +35,7 @@
         "@types/styled-components": "^5.1.15",
         "chart.js": "^3.6.0",
         "cypress": "^9.0.0",
-        "dayjs": "^1.11.2",
+        "dayjs": "^1.11.3",
         "jss": "^10.8.2",
         "jss-rtl": "^0.3.0",
         "next": "^12.1.6",
@@ -44,10 +45,11 @@
         "react-dom": "17.0.2",
         "recharts": "^2.1.6",
         "sass": "^1.49.7",
-        "sharp": "^0.29.2",
+        "sharp": "^0.30.6",
         "styled-components": "^5.3.3",
         "stylis": "^4.0.10",
-        "stylis-plugin-rtl": "^2.1.1"
+        "stylis-plugin-rtl": "^2.1.1",
+        "tabler-icons-react": "^1.48.1"
     },
     "devDependencies": {
         "@cloudflare/workers-types": "^3.11.0",
