--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "build:ex": "next build && next export"
     },
     "dependencies": {
-        "@emotion/cache": "^11.6.0",
-        "@emotion/react": "^11.7.1",
-        "@emotion/styled": "^11.6.0",
+        "@emotion/cache": "^11.9.3",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
         "@mantine/core": "^4.2.9",
         "@mantine/dates": "^4.2.9",
         "@mantine/dropzone": "^4.2.9",
@@ -25,52 +25,45 @@
         "@mantine/prism": "^4.2.9",
         "@mantine/rte": "^3.4.3",
         "@mantine/spotlight": "^4.2.9",
-        "@mui/base": "^5.0.0-alpha.62",
-        "@mui/core": "^5.0.0-alpha.54",
-        "@mui/icons-material": "^5.3.1",
-        "@mui/material": "^5.3.1",
-        "@mui/styled-engine-sc": "^5.3.0",
-        "@mui/styles": "^5.1.0",
-        "@mui/system": "^5.1.0",
-        "@types/styled-components": "^5.1.15",
-        "chart.js": "^3.6.0",
-        "cypress": "^9.0.0",
+        "@types/styled-components": "^5.1.25",
+        "chart.js": "^3.8.0",
+        "cypress": "^10.1.0",
         "dayjs": "^1.11.3",
-        "jss": "^10.8.2",
+        "jss": "^10.9.0",
         "jss-rtl": "^0.3.0",
         "next": "^12.1.6",
-        "next-pwa": "^5.4.0",
-        "react": "17.0.2",
-        "react-chartjs-2": "^3.3.0",
-        "react-dom": "17.0.2",
-        "recharts": "^2.1.6",
-        "sass": "^1.49.7",
+        "next-pwa": "^5.5.4",
+        "react": "18.1.0",
+        "react-chartjs-2": "^4.2.0",
+        "react-dom": "18.1.0",
+        "recharts": "^2.1.10",
+        "sass": "^1.52.3",
         "sharp": "^0.30.6",
-        "styled-components": "^5.3.3",
-        "stylis": "^4.0.10",
+        "styled-components": "^5.3.5",
+        "stylis": "^4.1.1",
         "stylis-plugin-rtl": "^2.1.1",
         "tabler-icons-react": "^1.48.1"
     },
     "devDependencies": {
         "@cloudflare/workers-types": "^3.11.0",
-        "@next/eslint-plugin-next": "^12.0.3",
-        "@types/node": "16.11.6",
-        "@types/react": "17.0.34",
-        "eslint": "^7.11.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-next": "12.0.3",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.25.3",
+        "@next/eslint-plugin-next": "^12.1.6",
+        "@types/node": "17.0.42",
+        "@types/react": "18.0.12",
+        "eslint": "^8.17.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-next": "12.1.6",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.27.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "husky": "^7.0.4",
-        "lint-staged": "^12.0.2",
-        "prettier": "^2.4.1",
-        "pretty-quick": "^3.1.1",
-        "ts-node-dev": "^1.0.0-pre.44",
-        "typescript": "4.4.4"
+        "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-react-hooks": "^4.5.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.1",
+        "prettier": "^2.6.2",
+        "pretty-quick": "^3.1.3",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "4.7.3"
     }
 }
