--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,8 @@
 name: Deploy
 
 on:
-  push:
-    branches: [ "*" ]
+  repository_dispatch:
+    types: [ build_success ]
 
 env:
   REGISTRY: ghcr.io
