--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,10 @@
 name: Deploy
 
 on:
-  repository_dispatch:
-    types: [ build_success ]
+  workflow_run:
+    workflows: [ "Build" ]
+    types:
+      - completed
 
 env:
   REGISTRY: ghcr.io
