--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and publish on stage
 
 on:
   push:
@@ -62,3 +62,49 @@ jobs:
         env:
           COSIGN_EXPERIMENTAL: "true"
         run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
+      id-token: write
+    needs: build
+    environment:
+      name: DigitalOcean
+      url: http://${{secrets.SSH_HOST}}
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
+      - name: SSH Key
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_PRIVATE_KEY" > ${{ github.workspace }}/../private.key
+          sudo chmod 600 ${{ github.workspace }}/../private.key
+        shell: bash
+        env:
+          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: deploy on production
+        env:
+          CMD: |
+            cd $SSH_PROJECT_PATH
+            echo "$COMPOSE" > compose.yml
+            echo "${{secrets.MYSQL_ROOT_PASSWORD}}" > mysql_root_password.txt
+            echo "${{secrets.ENV}}" > .env
+            echo "${{secrets.CONFIG}}" > config.yaml
+            docker compose pull
+            docker compose down
+            docker compose up -d --remove-orphans
+          SSH_HOST: ${{secrets.SSH_HOST}}
+          SSH_USER: ${{secrets.SSH_USER}}
+          SSH_PORT: ${{secrets.SSH_PORT}}
+          SSH_PROJECT_PATH: ${{secrets.SSH_PATH}}
+          SSH_KEY_PATH: ${{ github.workspace }}/../private.key
+        run: |
+          COMPOSE=$(cat compose.yaml)
+          ssh -o StrictHostKeyChecking=no -i ${{ github.workspace }}/../private.key $SSH_USER@$SSH_HOST -p $SSH_PORT "$CMD"
+        shell: bash
