--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
+    "build:ex": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -22,5 +23,8 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.5.1"
   }
 }
